--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -12,7 +12,7 @@
     --popover-foreground: 240 10% 3.9%;
     --primary: 240 5.9% 10%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
+    --secondary: 230 9% 27%;
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
@@ -20,6 +20,11 @@
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
+    --brand-purple: 252 81% 40%;
+    --brand-purple-light: 254 76% 47%;
+    --brand-purple-lighter: 248 85% 84%;
+    --brand-border: 236 13% 75%;
+    --brand-surface-layer: 240 100% 98%;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
