--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -4,27 +4,32 @@
 
 @layer base {
   :root {
+    --purple-80: 251 81% 40%;
+    --purple-70: 251 76% 48%;
+    --purple-60: 251 82% 53%;
+    --purple-50: 251 82% 75%;
+    --purple-40: 251 82% 85%;
+
+    --layer-1: 240 100% 97%;
+    --layer-2: 240 33% 95%;
+    --layer-3: 240 10% 75%;
+
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
+    --primary: var(--purple-80);
     --primary-foreground: 0 0% 98%;
     --secondary: 230 9% 27%;
     --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
+    --muted: var(--layer-1);
+    --muted-foreground: 251 82% 53%;
+    --accent: var(--layer-1);
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --brand-purple: 252 81% 40%;
-    --brand-purple-light: 254 76% 47%;
-    --brand-purple-lighter: 248 85% 84%;
-    --brand-border: 236 13% 75%;
-    --brand-surface-layer: 240 100% 98%;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
@@ -34,11 +39,11 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --sidebar-background: 0 0% 98%;
+    --sidebar-background: var(--layer-1);
     --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary: var(--purple-80);
     --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent: var(--layer-2);
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
